# BassMusic

./: .gitignore  README.md  package-lock.json  package.json
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs  realtime.rs
src-tauri/src/dsp/: bass_boost.rs  compressor.rs  frequency_shift.rs  mod.rs  pipeline.rs
