[package]
name = "bass-music"
version = "0.1.0"
description = "BassMusic - 听障人士音频增强工具"
authors = ["you"]
edition = "2021"

[lib]
name = "bassmusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "pcm"] }
hound = "3.5"
rustfft = "6.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
